# robotframework-schemathesis-workshop

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  tasks.py
atest/: 1_test.robot  2_test.robot  3_test.robot  AuthExtension.py  hook.py
atest/output/: log.html  output.xml  report.html
docs/: architecture.pptx
test_app/: main.py
